--- a/index.html
+++ b/index.html
@@ -264,8 +264,7 @@
 
 <div id="Notice" class="tabcontent">
   <h2>Notice</h2>
-  <p>다음 업데이트는 2주 후에 게시될 예정입니다. 새로운 회계 및 세무 이슈가 있는 경우 아래 연락처로 제보해 주세요.</p>
-  <p>문의: finance_brief@yourdomain.com</p>
+  <p>다음 업데이트는 2주 후에 게시될 예정입니다.</p>
 </div>
 
 <script>
