--- a/index.html
+++ b/index.html
@@ -264,7 +264,12 @@
 
 <div id="Notice" class="tabcontent">
   <h2>Notice</h2>
-  <p>다음 업데이트는 2주 후에 게시될 예정입니다.</p>
+  <p>경비 사용 규정 관련하여 아래와 같이 안내드립니다.</p>
+  <p>그룹 규정 통일 및 내부감사 후속 조치 일환으로 아래 경비 사용이 금지되었으니 참고 부탁드리겠습니다.</p>
+<p>해당 내용은 최초 공지 시점(8/1) 이후 사용분부터 적용됩니다.</p>
+    <p>상품권, 기프티콘 등 현금화 가능한 물품 구매 금지 (배달의민족/스타벅스 상품권 등)</p>
+    <p>이에 따라 관련 업종 및 전자상거래(ex. 네이버, 쿠팡, 지마켓, 이마트 등) 구매 시 상세 내역을 확인할 수 있는 증빙 첨부를 부탁드립니다.</p>
+    
 </div>
 
 <script>
